fix search bar and button not appearing well on mobile

--- a/ClientApp/src/styles/AppStyles.scss
+++ b/ClientApp/src/styles/AppStyles.scss
@@ -20,26 +20,34 @@ Search Bar Styles
 
 .search-bar-wrapper {
   display: flex;
+  flex-direction: row;
   width: 100%;
   justify-content: center;
   align-items: center;
   max-width: 400px;
 
+  @media only screen and (max-width: 768px) {
+    /* if mobile, you want to wrap the button to the next line */
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+
   input[type="text"].search-input {
     border-radius: 5px;
     line-height: 30px;
-    width: 280px;
+    width: 300px;
     min-width: 100px;
-    flex: 3 1 280px;
+    flex: 3 1 300px;
 
     @media only screen and (max-width: 768px) {
       /* if mobile, make the width smaller to fit the button */
-      width: 200px;
+      width: 100%;
+      flex: none;
     }
   }
 
   .search-btn {
-    flex: 1 1 auto;
+    flex: 0 1 70px;
     height: 35px;
     border: transparent;
     text-transform: uppercase;
@@ -49,6 +57,12 @@ Search Bar Styles
     margin-left: 10px;
     width: auto;
     transition: background-color $transition-length;
+
+    @media only screen and (max-width: 768px) {
+      /* if mobile, no extra margin is required */
+      margin-left: 0;
+    }
+
     &:hover {
       background-color: #750c0c;
     }
